--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Push Docker Image
       run: |
         docker push fdeoses/docker-graphql:0.0.2
-      
+        docker push fdeoses/docker-graphql:latest
         
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
